--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -6,4 +6,4 @@ exec-once = firefox
 exec-once = hyprpm enable hy3
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-kde/polkit-kde-authentication-agent-1 &
+exec-once = systemctl --user start hyprpolkitagent
