--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ catppuccin-cursors (I use catppuccin-mocha-dark),
 starship,
 fish,
 kitty,
+hyprpolkitagent for authentification
 mako for notifications
 hy3 plugin for hyprland,
 MonoLisa nerd font,
